apps/foundryvtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundryvtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foundryvtt
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: foundryvtt
    spec:
      securityContext:
        runAsUser: 1000
      containers:
        - image: node:13.13.0
          name: foundryvtt
          command: ["node"]
          args: ["/foundryvtt/resources/app/main.js", "--noupnp", "--dataPath=/foundrydata"]
          resources:
            requests:
              cpu: "100m"
              memory: "500Mi"
          volumeMounts:
            - name: foundry-data
              mountPath: /foundrydata
            - name: foundry-vtt
              mountPath: /foundryvtt
      volumes:
        - name: foundry-data
          persistentVolumeClaim:
            claimName: foundry-data-hostpath
        - name: foundry-vtt
          persistentVolumeClaim:
            claimName: foundry-vtt-hostpath
