apps/foundryvtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foundryvtt
spec:
  ports:
    - port: 30000
  selector:
    app: foundryvtt
